--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
 <body>
     <header class="cabecalho">
         <div class="container">
-            <span class="cabecalho__menu-hamburguer container__imagem"></span>
+            <input type="checkbox" id="menu" class="container__botao">
+            <label for="menu">
+                <span class="cabecalho__menu-hamburguer container__imagem"></span>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__titulo">Categorias</li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Programação</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Front-end</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Infraestrutura</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Business</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Design & UX</a></li>
+            </ul>
             <img src="./img/Logo.svg" alt="Logo da alura books" class="container__imagem">
         </div>
         <div class="container">
@@ -23,7 +34,7 @@
         </div>
     </header>
     <main>
-        <h1>Alura</h1>
+        
     </main>
     <footer></footer>
 </body>
