Carrossel com SwiperJs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Alura Books</title>
 </head>
@@ -39,8 +40,47 @@
             <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
             <input type="search" class="banner__pesquisa" placeholder="Qual será a sua próxima leitura?">
         </section>
+
+        <section class="carrossel">
+            <h2 class="carrossel__titulo">ÚLTIMOS LANÇAMENTOS</h2>
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="./img/ApacheKafka.svg" alt="Livro de Apache"></div>
+                    <div class="swiper-slide"><img src="./img/Guia Front-end.svg" alt="Livro de Front-end"></div>
+                    <div class="swiper-slide"><img src="./img/Javascript.svg" alt="Livro de Javascript"></div>
+                    <div class="swiper-slide"><img src="./img/Liderança.svg" alt="Livro de Liderança"></div>
+                    <div class="swiper-slide"><img src="./img/Portugol.svg" alt="Livro de Portugol"></div>
+                </div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+        </section>
     </main>
     <footer></footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,
+            pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets',
+            },
+        });
+
+
+        // Now you can use all slider methods like
+        swiper.slideNext();
+    </script>
 </body>
 
 </html>
