--- a/index.html
+++ b/index.html
@@ -62,6 +62,71 @@
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
             </div>
+
+            <div class="card">
+                <div class="card__descricao">
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__subtitulo">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <img src="./img/Angular.svg" alt="Imagem Angular" class="card__imagem">
+                </div>
+                <div class="card__botoes">
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="./img/Favoritos.svg" alt="Favoritar livro"
+                                class="botoes__icone"></li>
+                        <li class="botoes__item"><img src="./img/Compras.svg" alt="Adicionar no carrinho de compras"
+                                class="botoes__icone"></li>
+                    </ul>
+                    <a href="#" class="botoes__link">Saiba Mais</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="carrossel">
+            <h2 class="carrossel__titulo">MAIS VENDIDOS</h2>
+
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="./img/ApacheKafka.svg" alt="Livro de Apache"></div>
+                    <div class="swiper-slide"><img src="./img/Guia Front-end.svg" alt="Livro de Front-end"></div>
+                    <div class="swiper-slide"><img src="./img/Javascript.svg" alt="Livro de Javascript"></div>
+                    <div class="swiper-slide"><img src="./img/Liderança.svg" alt="Livro de Liderança"></div>
+                    <div class="swiper-slide"><img src="./img/Portugol.svg" alt="Livro de Portugol"></div>
+                </div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+
+            <div class="card">
+                <div class="card__descricao">
+                    <div class="descricao">
+                        <img class="descricao__imagem" src="./img/Estrelinhas.svg" alt="Qualificacao">
+                        <h3 class="descricao__titulo">Autora do Mês</h3>
+                        <h2 class="descricao__subtitulo">Juliana Agarikov</h2>
+                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                    </div>
+                    <img src="./img/Perfil-escritora 1.svg" alt="Imagem Angular" class="card__imagem">
+                </div>
+                <div class="card__botoes">
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="./img/Favoritos.svg" alt="Favoritar livro"
+                                class="botoes__icone"></li>
+                        <li class="botoes__item"><img src="./img/Compras.svg" alt="Adicionar no carrinho de compras"
+                                class="botoes__icone"></li>
+                    </ul>
+                    <a href="#" class="botoes__link">Saiba Mais</a>
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
