Lista de topicos

--- a/index.html
+++ b/index.html
@@ -128,6 +128,20 @@
                 </div>
             </div>
         </section>
+
+        <section class="topicos">
+            <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+            <ul class="topicos__lista">
+                <li class="topicos__lista-item"><a href="#" class="lista-item">Android</a></li>
+                <li class="topicos__lista-item"><a href="#" class="lista-item">Marketing Digital</a></li>
+                <li class="topicos__lista-item"><a href="#" class="lista-item">Agile</a></li>
+                <li class="topicos__lista-item"><a href="#" class="lista-item">Startups</a></li>
+                <li class="topicos__lista-item"><a href="#" class="lista-item">HTML & CSS</a></li>
+                <li class="topicos__lista-item"><a href="#" class="lista-item">Python</a></li>
+                <li class="topicos__lista-item"><a href="#" class="lista-item">OO</a></li>
+                <li class="topicos__lista-item"><a href="#" class="lista-item">Java</a></li>
+            </ul>
+        </section>
     </main>
     <footer></footer>
 
