Finalizando projeto versao mobile

--- a/index.html
+++ b/index.html
@@ -142,8 +142,18 @@
                 <li class="topicos__lista-item"><a href="#" class="lista-item">Java</a></li>
             </ul>
         </section>
+
+        <section class="novidades">
+            <h2 class="novidades__titulo">Fique por dentro das novidades!</h2>
+            <p class="novidades__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+            <input type="email" class="novidades__email" placeholder="Cadastre seu e-mail">
+        </section>
+
+        <hr>
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <h2 class="rodape__titulo">Grupo Alura</h2>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script>
