--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
                 <li class="lista-menu__item"><a href="#" class="lista-menu__link">Design & UX</a></li>
             </ul>
             <img src="./img/Logo.svg" alt="Logo da alura books" class="container__imagem">
+            <div class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</div>
         </div>
+
+        <ul class="opcoes">
+            <li class="opcoes__item">Categorias</li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Minha Estante</a></li>
+        </ul>
+
         <div class="container">
-            <a href="#"><img src="./img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+            <a href="#"><img src="./img/Favoritos.svg" alt="Meus favoritos" class="container__imagem icone-favoritos"></a>
             <a href="#"><img src="./img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
             <a href="#"><img src="./img/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
         </div>
