Lista de categorias

--- a/index.html
+++ b/index.html
@@ -31,15 +31,26 @@
         </div>
 
         <ul class="opcoes">
-            <li class="opcoes__item">Categorias</li>
+            <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+            <label for="opcoes-menu">
+                <li class="opcoes__item">Categorias</li>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Programação</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Front-end</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Infraestrutura</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Business</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Design & UX</a></li>
+            </ul>
             <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
             <li class="opcoes__item"><a href="#" class="opcoes__link">Minha Estante</a></li>
         </ul>
 
         <div class="container">
-            <a href="#"><img src="./img/Favoritos.svg" alt="Meus favoritos" class="container__imagem icone-favoritos"></a>
+            <a href="#"><img src="./img/Favoritos.svg" alt="Meus favoritos"
+                    class="container__imagem icone-favoritos"></a>
             <a href="#"><img src="./img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-            <a href="#"><img src="./img/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
+            <a href="#"><img src="./img/Usuário.svg" alt="Meu perfil" class="container__imagem icone-perfil"></a>
         </div>
     </header>
     <main>
@@ -121,7 +132,8 @@
                         <img class="descricao__imagem" src="./img/Estrelinhas.svg" alt="Qualificacao">
                         <h3 class="descricao__titulo">Autora do Mês</h3>
                         <h2 class="descricao__subtitulo">Juliana Agarikov</h2>
-                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em
+                            Front-End.</p>
                     </div>
                     <img src="./img/Perfil-escritora 1.svg" alt="Imagem Angular" class="card__imagem">
                 </div>
