Implementando site para tela desktop

--- a/index.html
+++ b/index.html
@@ -48,10 +48,17 @@
         </ul>
 
         <div class="container">
-            <a href="#"><img src="./img/Favoritos.svg" alt="Meus favoritos"
-                    class="container__imagem icone-favoritos"></a>
-            <a href="#"><img src="./img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-            <a href="#"><img src="./img/Usuário.svg" alt="Meu perfil" class="container__imagem icone-perfil"></a>
+            <a href="#">
+                <img src="./img/Favoritos.svg" alt="Meus favoritos" class="container__imagem icone-favoritos">
+            </a>
+            <a href="#" class="container__link">
+                <img src="./img/Compras.svg" alt="Carrinho de compras" class="container__imagem">
+                <p class="container__texto">Minha Sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="./img/Usuário.svg" alt="Meu perfil" class="container__imagem icone-perfil">
+                <p class="container__texto">Meu Perfil</p>
+            </a>
         </div>
     </header>
     <main>
