--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
@@ -33,7 +33,7 @@
 
         <ul class="opcoes">
             <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
-            <label for="opcoes-menu">
+            <label for="opcoes-menu" class="opcoes__rotulo">
                 <li class="opcoes__item">Categorias</li>
             </label>
             <ul class="lista-menu">
@@ -72,44 +72,47 @@
         <!--Carrossel-->
         <section class="carrossel">
             <h2 class="carrossel__titulo">ÚLTIMOS LANÇAMENTOS</h2>
-            <!-- Slider main container -->
-            <div class="swiper">
-                <!-- If we need pagination -->
-                <div class="swiper-pagination"></div>
+            <div class="carrossel__container">
+                <!-- Slider main container -->
+                <div class="swiper">
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
 
-                <!-- Additional required wrapper -->
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide"><img src="./img/ApacheKafka.svg" alt="Livro de Apache"></div>
-                    <div class="swiper-slide"><img src="./img/Guia Front-end.svg" alt="Livro de Front-end"></div>
-                    <div class="swiper-slide"><img src="./img/Javascript.svg" alt="Livro de Javascript"></div>
-                    <div class="swiper-slide"><img src="./img/Liderança.svg" alt="Livro de Liderança"></div>
-                    <div class="swiper-slide"><img src="./img/Portugol.svg" alt="Livro de Portugol"></div>
-                </div>
-
-                <!-- If we need navigation buttons -->
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-            </div>
-
-            <!--Card Carrossel-->
-            <div class="card">
-                <div class="card__descricao">
-                    <div class="descricao">
-                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                        <h2 class="descricao__subtitulo">Angular 11 e Firebase</h2>
-                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide"><img src="./img/ApacheKafka.svg" alt="Livro de Apache"></div>
+                        <div class="swiper-slide"><img src="./img/Guia Front-end.svg" alt="Livro de Front-end"></div>
+                        <div class="swiper-slide"><img src="./img/Javascript.svg" alt="Livro de Javascript"></div>
+                        <div class="swiper-slide"><img src="./img/Liderança.svg" alt="Livro de Liderança"></div>
+                        <div class="swiper-slide"><img src="./img/Portugol.svg" alt="Livro de Portugol"></div>
                     </div>
-                    <img src="./img/Angular.svg" alt="Imagem Angular" class="card__imagem">
+
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
-                <div class="card__botoes">
-                    <ul class="botoes">
-                        <li class="botoes__item"><img src="./img/Favoritos.svg" alt="Favoritar livro"
-                                class="botoes__icone"></li>
-                        <li class="botoes__item"><img src="./img/Compras.svg" alt="Adicionar no carrinho de compras"
-                                class="botoes__icone"></li>
-                    </ul>
-                    <a href="#" class="botoes__link">Saiba Mais</a>
+
+                <!--Card Carrossel-->
+                <div class="card">
+                    <div class="card__descricao">
+                        <div class="descricao">
+                            <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                            <h2 class="descricao__subtitulo">Angular 11 e Firebase</h2>
+                            <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.
+                            </p>
+                        </div>
+                        <img src="./img/Angular.svg" alt="Imagem Angular" class="card__imagem">
+                    </div>
+                    <div class="card__botoes">
+                        <ul class="botoes">
+                            <li class="botoes__item"><img src="./img/Favoritos.svg" alt="Favoritar livro"
+                                    class="botoes__icone"></li>
+                            <li class="botoes__item"><img src="./img/Compras.svg" alt="Adicionar no carrinho de compras"
+                                    class="botoes__icone"></li>
+                        </ul>
+                        <a href="#" class="botoes__link">Saiba Mais</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -117,47 +120,48 @@
         <!--Carrossel 2-->
         <section class="carrossel">
             <h2 class="carrossel__titulo">MAIS VENDIDOS</h2>
+            <div class="carrossel__container">
+                <!-- Slider main container -->
+                <div class="swiper">
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
 
-            <!-- Slider main container -->
-            <div class="swiper">
-                <!-- If we need pagination -->
-                <div class="swiper-pagination"></div>
-
-                <!-- Additional required wrapper -->
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide"><img src="./img/ApacheKafka.svg" alt="Livro de Apache"></div>
-                    <div class="swiper-slide"><img src="./img/Guia Front-end.svg" alt="Livro de Front-end"></div>
-                    <div class="swiper-slide"><img src="./img/Javascript.svg" alt="Livro de Javascript"></div>
-                    <div class="swiper-slide"><img src="./img/Liderança.svg" alt="Livro de Liderança"></div>
-                    <div class="swiper-slide"><img src="./img/Portugol.svg" alt="Livro de Portugol"></div>
-                </div>
-
-                <!-- If we need navigation buttons -->
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-            </div>
-
-            <!--Card Carrossel 2-->
-            <div class="card">
-                <div class="card__descricao">
-                    <div class="descricao">
-                        <img class="descricao__imagem" src="./img/Estrelinhas.svg" alt="Qualificacao">
-                        <h3 class="descricao__titulo">Autora do Mês</h3>
-                        <h2 class="descricao__subtitulo">Juliana Agarikov</h2>
-                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em
-                            Front-End.</p>
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide"><img src="./img/ApacheKafka.svg" alt="Livro de Apache"></div>
+                        <div class="swiper-slide"><img src="./img/Guia Front-end.svg" alt="Livro de Front-end"></div>
+                        <div class="swiper-slide"><img src="./img/Javascript.svg" alt="Livro de Javascript"></div>
+                        <div class="swiper-slide"><img src="./img/Liderança.svg" alt="Livro de Liderança"></div>
+                        <div class="swiper-slide"><img src="./img/Portugol.svg" alt="Livro de Portugol"></div>
                     </div>
-                    <img src="./img/Perfil-escritora 1.svg" alt="Imagem Angular" class="card__imagem">
+
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
-                <div class="card__botoes">
-                    <ul class="botoes">
-                        <li class="botoes__item"><img src="./img/Favoritos.svg" alt="Favoritar livro"
-                                class="botoes__icone"></li>
-                        <li class="botoes__item"><img src="./img/Compras.svg" alt="Adicionar no carrinho de compras"
-                                class="botoes__icone"></li>
-                    </ul>
-                    <a href="#" class="botoes__link">Saiba Mais</a>
+
+                <!--Card Carrossel 2-->
+                <div class="card">
+                    <div class="card__descricao">
+                        <div class="descricao">
+                            <img class="descricao__imagem" src="./img/Estrelinhas.svg" alt="Qualificacao">
+                            <h3 class="descricao__titulo">Autora do Mês</h3>
+                            <h2 class="descricao__subtitulo">Juliana Agarikov</h2>
+                            <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em
+                                Front-End.</p>
+                        </div>
+                        <img src="./img/Perfil-escritora 1.svg" alt="Imagem Angular" class="card__imagem">
+                    </div>
+                    <div class="card__botoes">
+                        <ul class="botoes">
+                            <li class="botoes__item"><img src="./img/Favoritos.svg" alt="Favoritar livro"
+                                    class="botoes__icone"></li>
+                            <li class="botoes__item"><img src="./img/Compras.svg" alt="Adicionar no carrinho de compras"
+                                    class="botoes__icone"></li>
+                        </ul>
+                        <a href="#" class="botoes__link">Saiba Mais</a>
+                    </div>
                 </div>
             </div>
         </section>
